<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/original_tire_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:text="@string/original_tire_size_title"/>

            <EditText
                android:id="@+id/original_tire_diameter_edit_text"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="4sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:hint="@string/tire_diameter_hint"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:ellipsize="start"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_tire_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:text="@string/new_tire_size_title"/>

            <EditText
                android:id="@+id/new_tire_diameter_edit_text"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginLeft="4sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:hint="@string/tire_diameter_hint"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:imeOptions="actionPrevious"
                android:ellipsize="end"
                android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>

    <!--Results of tire comparison-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/original_revolutions_per_unit"
                        android:layout_width="0sp"
                        android:layout_height="50sp"
                        android:gravity="center"
                        android:text="@string/revolutions_per_mile_suffix"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:ellipsize="start"
                        android:singleLine="true"/>
                    <TextView
                        android:id="@+id/new_revolutions_per_unit"
                        android:layout_width="0sp"
                        android:layout_height="50sp"
                        android:gravity="center"
                        android:text="@string/revolutions_per_mile_suffix"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_weight="1"
                        android:ellipsize="start"
                        android:singleLine="true"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:text="@string/correction_factor_prefix"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_column="1"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/correction_factor_textview"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:text="--"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:tooltipText="Multiply indicated speed or mileage to calculate actual value"
                        android:gravity="center_horizontal|top"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:ellipsize="start"
                        android:singleLine="true"/>
                </TableRow>
            </TableLayout>


    </LinearLayout>


</LinearLayout>
